--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -32,7 +32,7 @@
     }
 }
 
-.naw {
+.nav {
     &__list {
         align-items: center;
         margin-left: 100px;
@@ -40,6 +40,15 @@
         font-weight: 500;
         line-height: 26px;
         color: #606060;
+
+        @include small-tablet {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        @include small-tablet {
+            font-size: 16px;
+        }
     }
 
     &__item {
@@ -51,11 +60,42 @@
             color: var(--active-color);
         }
     }
+
+    &__list--header {
+        @include small-tablet {
+            margin: 0;
+            padding: 90px 32px;
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            left: 0;
+            background: #5C4EAE;
+            color: #fff;
+            overflow-y: auto;
+            z-index: 99;
+
+            visibility: hidden;
+            transform: translateY(-100%);
+            transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
+        }
+    }
+
+    &__menu--active {
+        .menu--active {
+            visibility: visible;
+            transform: none;
+        }
+    }
 }
 
 .nav__button {
     align-items: center;
     gap: 9px;
+
+    @include small-tablet {
+        display: none;
+    }
 }
 
 .nav__link--button {
