--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -1,27 +1,41 @@
 .about {
+    max-width: 100%;
     margin-top: 85px;
     position: relative;
     background: #5C4EAE;
 
     svg {
         position: absolute;
-        top: 0;
         height: 160px;
+
+        @include small-tablet {
+            display: none;
+        }
     }
 
     &__list {
         justify-content: space-between;
         margin: 0 auto;
         padding: 49px 0 48px 0;
-        min-width: 950px;
+        max-width: 950px;
 
         @include big-desktop {
-            min-width: 669px;
+            max-width: 669px;
             padding: 34px 0;
+        }
+
+        @include small-tablet {
+            
+        }
+
+        @include mobile {
+            flex-direction: column;
+            padding: 72px 0 89px;
         }
     }
 
     &__item {
+        width: 260px;
         color: #fff;
         
         &--line {
@@ -38,6 +52,28 @@
                 background: rgba(197, 197, 197, 1);
                 opacity: 0.15;
             }
+
+            @include mobile {
+                &::before {
+                    content: "";
+                    width: 100%;
+                    height: 1px;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background: rgba(197, 197, 197, 1);
+                    opacity: 0.15;
+                }
+            }
+        }
+
+        @include small-tablet {
+            width: 160px;
+            text-align: center;
+        }
+
+        @include mobile {
+            margin-bottom: 30px;
         }
     }
 
@@ -56,9 +92,9 @@
     }
 
     &__description {
-        max-width: 240px;
+        width: 263px;
         font-weight: 500;
-        font-size: 14.4px;
+        font-size: 14px;
         line-height: 22px;
         text-align: center;
         color: #C5BFED;
