--- a/scss/components/_dishes.scss
+++ b/scss/components/_dishes.scss
@@ -15,9 +15,20 @@
         }
     }
 
+    &__add-favorites {
+        @include mobile {
+            width: 14px;
+            height: 11px;
+        }
+    }
+
     &__skill {
         @include big-desktop {
             margin-left: 0px;
+        }
+
+        @include mobile {
+            font-size: 7px;
         }
     }
 
@@ -39,6 +50,14 @@
         @include tablet {
             justify-content: center;
             flex-wrap: wrap;
+        }
+    }
+
+    &__time {
+        margin-right: 6px;
+
+        @include mobile {
+            margin-right: 0px;
         }
     }
 
@@ -68,6 +87,11 @@
             width: 160px;
         }
 
+        @include mobile {
+            width: 150px;
+            padding: 27px 11px 19px 3px;
+        }
+
     }
 
     &__add--favorites {
@@ -85,6 +109,11 @@
             font-size: 16px;
             line-height: 26px;
         }
+
+        @include mobile {
+            font-size: 14px;
+            line-height: 23px;
+        }
     }
 
     &__card--characteristic {
@@ -99,6 +128,11 @@
             font-size: 12px;
             line-height: 16px;
             margin-bottom: 9px;
+        }
+
+        @include mobile {
+            font-size: 11px;
+            line-height: 15px;
         }
     }
 
@@ -118,6 +152,11 @@
         @include big-desktop {
             width: 39px;
             height: 35px;
+        }
+
+        @include mobile {
+            width: 34px;
+            height: 30px;
         }
     }
 }
@@ -139,10 +178,19 @@
         @include big-desktop {
             font-size: 13px;
         }
+
+        @include mobile {
+            font-size: 12px;
+        }
     }
 
     @include big-desktop {
         font-size: 18px;
         line-height: 28px;
+    }
+
+    @include mobile {
+        font-size: 16px;
+        list-style: 26px;
     }
 }
