--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -14,10 +14,19 @@
         @include for-desktop {
             width: 500px;
         }
+
+        @include small-tablet {
+            width: 350px;
+        }
     }
 
     &__content {
-        justify-content: space-between
+        justify-content: space-between;
+
+        @include mobile {
+            justify-content: center;
+            flex-wrap: wrap;
+        }
     }
 
     &__content--description {
@@ -42,6 +51,11 @@
             font-size: 10px;
             margin-bottom: 12px;
         }
+
+        @include mobile {
+            justify-content: center;
+            color: #201F1F;
+        }
     }
 
     &__title {
@@ -64,6 +78,12 @@
         @include tablet {
             font-size: 50px;
             margin-bottom: 8px;
+        }
+
+        @include mobile {
+            font-size: 44px;
+            text-align: center;
+            margin-bottom: 15px;
         }
     }
 
@@ -88,8 +108,15 @@
         }
 
         @include tablet {
-            font-size: 11px;
+            font-size: 12px;
             line-height: 16px;
+        }
+        
+        @include mobile {
+            font-size: 11px;
+            line-height: 17px;
+            text-align: center;
+            margin-bottom: 40px;
         }
     }
 
@@ -97,6 +124,18 @@
         margin-bottom: 30px;
         align-items: center;
         gap: 18px;
+
+        @include mobile {
+            justify-content: center;
+            margin-bottom: 26px;
+        }
+    }
+
+    &__reviews {
+        @include mobile {
+            text-align: center;
+            margin-bottom: 60px;
+        }
     }
 
     .btn {
@@ -120,6 +159,10 @@
         @include big-desktop {
             padding: 12px 21px;
         }
+
+        @include mobile {
+            padding: 14px 24px 12px;
+        }
     }
 
     &--pro {
@@ -135,6 +178,10 @@
 
         @include big-desktop {
             padding: 12px 19px;
+        }
+
+        @include mobile {
+            padding: 14px 22px 12px 21px;
         }
     }
 }
