--- a/scss/components/_restaurant.scss
+++ b/scss/components/_restaurant.scss
@@ -45,6 +45,15 @@
             margin-left: 23px;
         }
     }
+
+    &__time {
+        margin-right: 6px;
+
+        @include for-desktop {
+            font-size: 15px;
+            line-height: 20px;
+        }
+    }
 }
 
 .card {
@@ -72,7 +81,7 @@
 
         @include big-desktop {
             padding: 2px 6px;
-            font-size: 9px;
+            font-size: 10px;
         }
     }
 
@@ -108,22 +117,14 @@
         }
     }
 
-    &__time {
-        margin-right: 6px;
-
-        @include for-desktop {
-            font-size: 12px;
-        }
-
-        @include tablet {
-            font-size: 10px;
-        }
-    }
-
     &__rating {
         align-items: center;
         svg {
             margin-right: 6px;
+
+            @include mobile {
+                margin-right: 3px;
+            }
         }
     }
 
