--- a/scss/components/_restaurant.scss
+++ b/scss/components/_restaurant.scss
@@ -28,6 +28,11 @@
             line-height: 18px;
             margin-bottom: 60px;
         }
+
+        @include small-mobile {
+            line-height: 36px;
+        }
+        
     }
 
     &__content {
