--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -3,10 +3,11 @@
     margin-top: 85px;
     position: relative;
     background: #5C4EAE;
+    overflow: hidden;
 
     svg {
         position: absolute;
-        height: 160px;
+        height: 205px;
 
         @include small-tablet {
             display: none;
@@ -29,8 +30,9 @@
         }
 
         @include mobile {
-            flex-direction: column;
             padding: 72px 0 89px;
+            flex-direction: column;
+            align-items: center;
         }
     }
 
