--- a/scss/components/_subscribe.scss
+++ b/scss/components/_subscribe.scss
@@ -16,7 +16,7 @@
         padding: 46px 51px 0px 46px;
         border-radius: 30px;
         background: var(--primary-color);
-        background-image: url(/img/subscribe_img.png);
+        background-image: url("../../img/subscribe_img.png");
         background-size: cover;
         background-repeat: no-repeat;
         justify-content: space-between;
@@ -74,7 +74,7 @@
             outline: none;
             color: #878787;
             font-size: 16px;
-            text-transform: capitalize;
+            // text-transform: capitalize;
 
             @include big-desktop {
                 padding: 18px 170px 18px 18px;
@@ -88,6 +88,11 @@
 
             @include tablet {
                 padding: 16px 150px 15px 14px;
+            }
+
+            @include small-mobile {
+                padding: 12px 115px 12px 14px;
+                font-size: 12px;
             }
         }
 
@@ -121,6 +126,12 @@
                 padding: 12px 15px 12px 16px;
                 font-size: 10px;
                 top: 5px;
+            }
+
+            @include small-mobile {
+                padding: 10px 13px 9px 14px;
+                font-size: 10px;
+                top: 4px;
             }
         }
     }
